<resources>
    <string name="app_name">TEAM</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCGtt6Mvfu15bMqwFuYy69fAW4ursVTNN8</string>
    <string name="app_title">TEAM</string>

    <!-- Welcome fragment -->
    <string name="welcome">Welcome</string>
    <string name="to_the">TO THE</string>

    <!-- Login fragment -->
    <string name="login_caps">LOGIN</string>
    <string name="sign_in_underline"><u>Sign In</u></string>
    <string name="sign_in">Sign In</string>

    <!-- Sign up fragment -->
    <string name="sign_up_caps">SIGN UP</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>

    <!-- Reset password fragment -->
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="confirm_password">Confirm password</string>

    <!-- Authentication (fragments) -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="i_already_have_an_account">I already have an account!</string>
    <string name="email_sent">Email sent! PLease, check you email!</string>
    <string name="email_sending_failed">Check email or internet connection!</string>

    <!-- Authentication -->
    <string name="email_field_empty">Email field is empty!</string>
    <string name="password_field_empty">Password field is empty!</string>
    <string name="email_invalid">"Invalid email!"</string>
    <string name="invalid_credentials">Invalid credentials!</string>
    <string name="check_input_or_internet">Check input or internet connection!</string>
    <string name="password_6_symbols">Password should be at least 6 symbols!</string>
    <string name="password_1_character_or_symbol">Password must contain at least 1 character or symbol!</string>
    <string name="confirm_password_field_empty">Confirm password field is empty!</string>
    <string name="passwords_different">Passwords are different!</string>
    <string name="account_created">Account created successfully!</string>

    <!-- Settings fragment -->
    <string name="changes_saved">Changes saved!</string>
    <string name="filled_out_fields">Please fill out all the fields!</string>

    <!-- Statistics fragment -->
    <string name="avg_speed_over_time">Average Speed Over Time</string>

    <!--   Another fragment   -->
    <string name="your_trainings">Your Trainings</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="update_your_height_and_weight">Update your height and weight</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="kg">kg</string>
    <string name="your_weight">Your Weight</string>
    <string name="total_distance">Total Distance</string>
    <string name="_0km">0km</string>
    <string name="total_time">Total Time</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="_0kcal">0kcal</string>
    <string name="average_speed">Average Speed</string>
    <string name="start">Start</string>
    <string name="finish_run">Finish Run</string>
    <string name="map">Map</string>
    <string name="sort_by">Sort by:</string>
    <string name="add">Add</string>
    <string name="cancel_run">Cancel run</string>

    <!-- Strings for training adapter -->
    <string name="km_h">km/h</string>
    <string name="km">km</string>
    <string name="kcal">kcal</string>

    <!-- Notification -->
    <string name="notification_name">Training</string>

    <!-- Strings used for fragments for navigation -->
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>

    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="avg_speed">Avg speed</string>
    <string name="calories_burned">Cal. burned</string>

    <!-- Tracking -->
    <string name="stop">Stop</string>
    <string name="training_completed">Training completed!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_the_run">Cancel the run?</string>
    <string name="sure_cancel_run">Are you sure to cancel the current run and delete all its data?</string>
    <string name="accepting_permissions_request">You need to accept location permissions to use this app!</string>
    <string name="login_failed">Login failed( Something went wrong!</string>
    <string name="login_successfully">Login successfully!</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="continue_str">Continue</string>

    <!-- Settings fragment -->
    <string name="update_your_data">Update your data</string>
    <string name="username">Username</string>
    <string name="your_height">Your Height</string>
    <string name="cm">cm</string>

    <!-- App Settings -->
    <string name="night_mode">Night mode</string>
    <string name="private_account">Private account</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="send_us_message">Send us message</string>
    <string name="personal_settings">Personal settings</string>
    <string name="app_settings">App settings</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile_underline"><u>Edit profile</u></string>

    <string-array name="language_options">
        <item>English</item>
        <item>Русский</item>
        <item>Беларуская</item>
    </string-array>

    <string name="write_something">Write to us…</string>
    <string name="send">Send</string>

    <string name="edit_profile">Edit profile</string>
    <string name="bio">Bio</string>
    <string name="birthday">Birthday</string>
    <string name="height">height</string>
    <string name="save">Save</string>
    <string name="weight">weight</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="country">Country</string>

    <!-- Create an account -->
    <string name="create_an_account">Create profile</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="upload_successful">Upload successful!</string>
    <string name="birthday_required">Birthday is required</string>
    <string name="height_required">Height required</string>
    <string name="weight_required">Weight required</string>
    <string name="username_required">Username required</string>

    <!-- Profile / Edit profile -->
    <string name="profile">Profile</string>
    <string name="profile_updated_successfully">Profile updated successfully!</string>
    <string name="check_internet_connection">Check internet connection!</string>
    <string name="following"><u>following</u></string>
    <string name="followers"><u>followers</u></string>

    <string name="my_trainings">My trainings</string>
    <string name="published_trainings">Published trainings</string>
    <string name="groups">Groups</string>

    <!-- Nav menu -->
    <string name="community">Community</string>
    <string name="news">News</string>
    <string name="activity">Activity</string>
    <string name="publish">Publish</string>
    <string name="calories">Calories</string>


</resources>