<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.85"
    android:background="@mipmap/mountain_signing">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="199dp"
        android:layout_height="72dp"
        android:fontFamily="@font/itim"
        android:gravity="center"
        android:shadowColor="@color/black_opacity"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="3"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="272dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/et_round_corners"
        android:ems="10"
        android:fontFamily="@font/itim"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_opacity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="276dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/et_round_corners"
        android:ems="10"
        android:fontFamily="@font/itim"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_opacity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="276dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/et_round_corners"
        android:ems="10"
        android:fontFamily="@font/itim"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_opacity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="284dp"
        android:layout_height="45dp"
        android:alpha="0.75"
        android:background="@drawable/tv_rounded_corners"
        android:elevation="5dp"
        android:fontFamily="@font/itim"
        android:gravity="center"
        android:padding="5dp"
        android:shadowColor="@color/black_opacity"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="3"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="265dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/itim"
        android:text="@string/i_already_have_an_account"
        android:textColor="@color/white_additional_info"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/itim"
        android:text="@string/sign_in_underline"
        android:textColor="@color/white_additional_info"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toEndOf="@+id/tvHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

</androidx.constraintlayout.widget.ConstraintLayout>