<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/welcome"
    tools:context=".mvvm.fragments.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="219dp"
            android:layout_height="65dp"
            android:fontFamily="@font/itim"
            android:gravity="center"
            android:shadowColor="@color/black_opacity"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="3"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="56sp"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075" />

        <TextView
            android:id="@+id/tvToThe"
            android:layout_width="89dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/itim"
            android:gravity="center"
            android:shadowColor="@color/black_opacity"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="3"
            android:text="@string/to_the"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tvAppName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="219dp"
            android:layout_height="65dp"
            android:fontFamily="@font/itim"
            android:gravity="center"
            android:shadowColor="@color/black_opacity"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="3"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="56sp"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
            app:layout_constraintVertical_bias="0.096" />
        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="314dp"
            android:layout_height="45dp"
            android:alpha="0.75"
            android:gravity="center"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/itim"
            android:text="@string/login_caps"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:elevation="5dp"
            android:padding="5dp"
            android:shadowColor="@color/black_opacity"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.805" />


            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="314dp"
                android:layout_height="52dp"
                android:alpha="0.75"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/itim"
                android:gravity="center"
                android:text="@string/sign_up_caps"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:cornerRadius="56dp"
                android:shadowColor="@color/black_opacity"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                app:layout_constraintVertical_bias="0.309"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="31dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.951"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>