<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:alpha="0.7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:autoSizeTextType="uniform"
                android:text="@string/date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="01.01.2024"
                android:autoSizeTextType="uniform"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDurationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/duration"
                android:autoSizeTextType="uniform"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="00:00:39"
                android:autoSizeTextType="uniform"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAvgSpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:autoSizeTextType="uniform"
                android:text="@string/avg_speed"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvAvgSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="13km/h"
                android:autoSizeTextType="uniform"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDistanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/distance"
                android:autoSizeTextType="uniform"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0.068 km"
                android:autoSizeTextType="uniform"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCaloriesBurnedText"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/calories_burned"
                android:autoSizeTextType="uniform"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvCaloriesBurned"
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:gravity="end"
                android:text="13 kcal"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>